@@ -104,7 +104,7 @@ d   - Be a DNS proxy.
       o add a config option to turn it off.
     - Bug 364: notice when all the DNS requests we get back (including a few
       well-known sites) are all going to the same place.
-    - Bug 363: Warn and die if we can't find a nameserver and we're running a
+    o Bug 363: Warn and die if we can't find a nameserver and we're running a
       server; don't fall back to 127.0.0.1.
 ?   - maybe re-check dns when we change IP addresses, rather than
       every 12 hours?
